--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class = "video">
          <!-- Video-->
-        <video id="video" controls height="150" width="300"></video>
+        <video id="video" controls height="150" width="300" hidden></video>
         </div>
         <!-- Script -->
         <script src="script.js"> </script>
